Added Front End for Pathway Page, Fixed DB NullPointer

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,13 +1,15 @@
 body {
     background-color: whitesmoke;
     text-align: center;
-    font-family: 'Helvetica Neue', sans-serif;
-    margin-top: 150px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+    margin-top: 100px;
 }
 
 input {
     margin: 10px;
-    font-family: 'Helvetica Neuey', sans-serif;
+    font-family: 'Helvetica Neue', sans-serif;
     border-radius: 7px;
     padding: 5px;
 }
@@ -32,6 +34,13 @@ button {
     width: 100%;
     border-radius: 10px;
 
+}
+
+form {
+    width: 40%;
+    text-align: center;
+    display: inline-block;
+    align-content: center;
 }
 
 button:hover {
