Added GUI Additions: Sign-Up Button, Submit on Pathway, FAQs

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -62,6 +62,12 @@ span.psw {
     padding-top: 16px;
 }
 
+a.link
+{
+    color:grey;
+    text-decoration: none;
+}
+
 /* Change styles for span and cancel button on extra small screens */
 @media screen and (max-width: 300px) {
     span.psw {
