--- a/src/main/resources/static/css/mypath.css
+++ b/src/main/resources/static/css/mypath.css
@@ -1,9 +1,13 @@
+
 body {
     background-color: whitesmoke;
     text-align: center;
     font-family: 'Lato', sans-serif;
-    margin-top: 100px;
+    font-weight: 100;
+    font-size: 16px;
+    margin-top: 80px;
 }
+
 
 input {
     margin: 10px;
@@ -32,4 +36,31 @@ button {
 .dropdown-menu {
     height:100px;
     overflow-x: hidden;
+}
+
+button {
+    background-color: lightgray;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 20%;
+    border-radius: 10px;
+
+}
+a.link
+{
+    color:grey;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
 }
