Got one pathway to show up in gui and working on getting the other two to show.

--- a/src/main/resources/static/css/pathway.css
+++ b/src/main/resources/static/css/pathway.css
@@ -7,7 +7,7 @@ body {
     margin-top: 100px;
 }
 
-#container {
+#results {
     display: inline-block;
     background-color: lightgray;
     padding: 14px 20px;
