--- a/src/main/resources/static/css/generate.css
+++ b/src/main/resources/static/css/generate.css
@@ -5,7 +5,11 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     font-size: 16px;
-    margin-top: 180px;
+    margin-top: 20px;
+}
+
+label {
+    font-size: 18px;
 }
 
 body {
@@ -14,6 +18,16 @@ body {
 
 .ui.dropdown {
     max-width: 800px;
+}
+
+.ui.right.labeled.input {
+    max-width: 250px;
+    align-content: center;
+
+}
+
+.ui.button {
+    width: 100px;
 }
 
 @media only screen and (max-width: 767px) {
