Added back Guest sign in as button, styling changes

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -69,9 +69,10 @@ a.link
     text-decoration: none;
 }
 
-#guest-login {
-    width: 40%;
+#guest {
+    width: 30%;
     align-content: center;
+    color:darkgrey;
 }
 
 /* Change styles for span and cancel button on extra small screens */
