Sign up page was taking you to page to just input username, name and password and took you to the page with three pathways already made without entering their concentration data, so I had to fix that and add style to that page. After a user pressed sign in it took you to a page that said please enter your rising semester instead of our default cs pathways, so I fixed that. The stats in each pathway was set to the default so I added the pathways actual stats that I thought would be relevant. Routing between pages is now working and done.

--- a/src/main/resources/static/css/generate.css
+++ b/src/main/resources/static/css/generate.css
@@ -29,6 +29,8 @@ body {
 }
 
 .ui.button {
+    color:white;
+    background-color: forestgreen;
     width: 100px;
 }
 
@@ -69,7 +71,7 @@ note {
 }
 
 button {
-    background-color: lightgray;
+    background-color: forestgreen;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -86,7 +88,7 @@ button {
 }
 
 button {
-    background-color: lightgray;
+    background-color: forestgreen;
     color: white;
     justify-content: space-around;
     alignment: center;
