Fixed more styling on sign me up page and added styling to generate button.

--- a/src/main/resources/static/css/generate.css
+++ b/src/main/resources/static/css/generate.css
@@ -30,7 +30,7 @@ body {
 
 .ui.button {
     color:white;
-    background-color: forestgreen;
+    background-color: #4CAF50;
     width: 100px;
 }
 
