--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -1,3 +1,29 @@
+body {
+    background-color: whitesmoke;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: 100;
+    font-size: 16px;
+    margin-top: 100px;
+}
+
+input {
+    margin: 10px;
+    font-family: 'Helvetica Neue', sans-serif;
+    border-radius: 7px;
+    padding: 5px;
+}
+
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
 
 #submit {
     color: forestgreen;
@@ -5,17 +31,20 @@
     font-size: 40px;
     border: none;
     cursor: pointer;
-    float:right;
 }
 .button{
-    float:right
+    padding:15px 80px;
 }
 
+form {
+    text-align: center;
+    display: inline-block;
+    align-content: center;
+}
 .container {
     padding: 16px;
-    display: inline-flex;
+    display: inline-grid;
     flex-direction: column;
-    margin-left: 40%;
 }
 .label {
     display:inline-grid;
