Fixed AI semesteres offered in the sql database.

--- a/src/main/resources/static/css/mypath.css
+++ b/src/main/resources/static/css/mypath.css
@@ -32,3 +32,243 @@ a.link {
     color: grey;
     text-decoration: none;
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 10vh; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    padding-right: 0.6em;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn-group button {
+    border-radius: 4px;
+    border-color: #f5ffff;
+    color: white; /* White text */
+    padding: 10px 24px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    font-family: Lato;
+}
+
+#btn1 {
+    background-color: #4CAF50; /* Green background */
+}
+
+#btn2 {
+    background-color: #35adaf; /* Blue-green background */
+}
+
+#btn3 {
+    background-color: #af3263; /* Magenta-pink background */
+}
+
+#btn-add-confirm {
+    background-color: #4CAF50; /* Green background */
+    border: none;
+    border-radius: 4px;
+    color: white; /* White text */
+    padding: 10px 10px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    font-family: Lato;
+}
+
+#btn-mov-confirm {
+    background-color: #4CAF50; /* Green background */
+    border: none;
+    border-radius: 4px;
+    color: white; /* White text */
+    padding: 10px 10px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    font-family: Lato;
+}
+
+#btn-swp-confirm {
+    background-color: #4CAF50; /* Green background */
+    border: none;
+    border-radius: 4px;
+    color: white; /* White text */
+    padding: 10px 10px; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    font-family: Lato;
+}
+
+/* Clear floats (clearfix hack) */
+.btn-group:after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.btn-group button:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+}
+
+.add-course {
+    display: none; /* Hidden by default */
+    z-index: 1; /* Sit on top */
+    margin: 0 auto;
+    width: 60%;
+    height: 70%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(87, 149, 117, 0.7); /* Fallback color */
+}
+
+.move-course {
+    display: none; /* Hidden by default */
+    z-index: 1; /* Sit on top */
+    margin: 0 auto;
+    width: 60%;
+    height: 70%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(38, 168, 180, 0.7); /* Fallback color */
+}
+
+.swap-course {
+    display: none; /* Hidden by default */
+    z-index: 1; /* Sit on top */
+    margin: 0 auto;
+    width: 60%;
+    height: 70%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(235, 74, 115, 0.7); /* Fallback color */
+}
+
+#course-to-move {
+    width: 27%;
+}
+
+#dest-semester {
+    width: 15%;
+}
+
+.ui-cards {
+    display: inline-flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 5% auto;
+}
+
+.ui-raised-link-card {
+    display: flex;
+    background-color: #fff;
+    border-radius: 4px;
+    border: medium solid;
+    margin-bottom: 3%;
+    margin-left: 7.3%;
+    margin-right: 3%;
+    color: #444;
+    cursor: pointer;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    padding-left: 4.8em;
+    width: 17em;
+    height: 21em;
+}
+
+.ui-raised-link-card:nth-child(1) {
+    border-color: #54defa;
+}
+
+.ui-raised-link-card:nth-child(2) {
+    border-color: #3effce;
+}
+
+.ui-raised-link-card:nth-child(3) {
+    border-color: #b4b3ff;
+}
+
+.ui-raised-link-card:nth-child(4) {
+    border-color: #eb6c95;
+}
+
+.ui-raised-link-card:nth-child(5) {
+    border-color: #eb5c48;
+}
+
+
+.ui-raised-link-card:nth-child(6) {
+    border-color: #3effce;
+}
+
+.ui-raised-link-card:nth-child(7) {
+    border-color: #54defa;
+}
+
+.ui-raised-link-card:nth-child(8) {
+    border-color: #b4b3ff;
+}
+
+
+.header-cc_pointer {
+    text-align: center;
+    color: black;
+    font-size: large;
+    border-width: 5px;
+    border-bottom: dashed;
+    border-color: inherit;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+.meta-cc_pointer {
+    color: grey;
+    padding-top: 3px;
+    font-size: small;
+    text-align: center;
+}
+
+.description {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.redirect {
+    float: left;
+    padding-left: 15px;
+}
+
+#submit {
+    color: forestgreen;
+    background: none;
+    font-size: 40px;
+    border: none;
+    cursor: pointer;
+}
+
+.ui.fluid.search.selection.dropdown {
+    width: 70%;
+    margin: 2% auto 0;
+}
