--- a/src/main/resources/static/css/pathway.css
+++ b/src/main/resources/static/css/pathway.css
@@ -77,9 +77,10 @@ a.link {
 }
 .regen {
     border-radius: 4px;
-    background-color: forestgreen;
+    border-color: white;
+    background-color: #4eb193;
     color:white;
-    font-size: larger;
+    font-size: medium;
     padding:7px;
     margin:2%;
 }
