--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -26,7 +26,7 @@ input[type=text], input[type=password] {
 }
 
 #submit {
-    color: forestgreen;
+    color: #575757;
     background: none;
     font-size: 40px;
     border: none;
