Most nav bar routing is set just need to do styling.

--- a/src/main/resources/static/css/mypath.css
+++ b/src/main/resources/static/css/mypath.css
@@ -27,6 +27,7 @@ a.item {
 .ui.fixed.borderless.menu {
     background-color: #4a008a;
     text-align: right;
+    float:right;
 }
 
 .ui .computer.only .item {
