--- a/src/main/resources/static/css/pathway.css
+++ b/src/main/resources/static/css/pathway.css
@@ -27,6 +27,10 @@ a.item {
 .ui.fixed.borderless.menu {
     background-color: #4a008a;
     text-align: right;
+    display: flow-root;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    padding-left: 5px;
 }
 
 .ui .computer.only .item {
