--- a/src/main/resources/static/css/mypath.css
+++ b/src/main/resources/static/css/mypath.css
@@ -108,8 +108,6 @@ a.item {
     border-bottom: 1px solid #fff;
 }
 
-
-/*is this a thing? can't find id*/
 #container {
     display: inline-block;
     background-color: lightgray;
@@ -270,6 +268,10 @@ a.link {
 }
 
 #course-to-move {
+     width: 27%;
+ }
+
+#course-to-swap {
     width: 27%;
 }
 
@@ -289,12 +291,12 @@ a.link {
     border-radius: 4px;
     border: medium solid;
     color: #444;
-    cursor: pointer;
     padding-top: 2em;
     padding-bottom: 2em;
     margin-bottom: 4em;
     width: 22em;
     height: 22em;
+    position:relative;
 }
 
 .blue {
@@ -341,10 +343,19 @@ a.link {
     grid-column-start: 2;
 }
 
+#myBtn14 {
+    grid-column-start: 2;
+}
+
+#myBtn16 {
+    grid-column-start: 2;
+}
+
 .year {
     text-align: center;
     color: #090027;
     font-size: large;
+    font-weight: bolder;
 }
 
 .header-cc_pointer {
@@ -362,6 +373,19 @@ a.link {
     padding-top: 3px;
     font-size: small;
     text-align: center;
+}
+
+.modify {
+    background-color: #251f82; /* Green background */
+    border: none;
+    border-radius: 4px;
+    color: white; /* White text */
+    padding: 0.3em; /* Some padding */
+    cursor: pointer; /* Pointer/hand icon */
+    font-family: Lato;
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
 }
 
 .description {
