--- a/src/main/resources/static/css/mypath.css
+++ b/src/main/resources/static/css/mypath.css
@@ -119,7 +119,6 @@ header {
     font-size: 20px;
 }
 
-
 span.psw {
     float: right;
     padding-top: 16px;
@@ -290,7 +289,7 @@ a.link {
     padding-top: 2em;
     padding-bottom: 2em;
     margin-bottom: 4em;
-    width: 22em;
+    width: 25vw;
     height: 22em;
     position:relative;
 }
@@ -418,7 +417,7 @@ a.link {
 
 .redirect {
     position: absolute;
-    left: 1em;
+    left: 1.1vw;
 }
 
 #submit {
