--- a/src/main/resources/static/css/pathway.css
+++ b/src/main/resources/static/css/pathway.css
@@ -124,6 +124,7 @@ a.item {
     width: 25%;
     height: 250px;
     border-radius: 10px;
+    vertical-align: top;
 }
 
 #container2 {
@@ -138,6 +139,7 @@ a.item {
     width: 25%;
     height: 250px;
     border-radius: 10px;
+    vertical-align: top;
 }
 
 #container3 {
@@ -152,6 +154,7 @@ a.item {
     width: 25%;
     height: 250px;
     border-radius: 10px;
+    vertical-align: top;
 }
 
 
