--- a/src/main/resources/static/css/faqs.css
+++ b/src/main/resources/static/css/faqs.css
@@ -1,50 +1,42 @@
 body {
     background-color: whitesmoke;
-    text-align: center;
     font-family: 'Lato', sans-serif;
     font-weight: 100;
     font-size: 16px;
-    margin:0px;
+    margin: 0px;
+    text-align: center;
 }
 
 a.header.item {
+    font-size: 1.3em;
+    top: -0.3em;
+    font-weight: bold;
     text-align: left;
     float: left;
-    font-size: xx-large;
+    /*margin-top: 0.55em;*/
+    margin-left: 6.82vw;
+    cursor: pointer;
 }
 
 .flags a {
     padding: .012em;
 }
 
-a.item {
-    padding-right: 5%;
-    float: right;
-    text-align: right;
-}
-
 /* Nav */
 .ui.fixed.borderless.menu {
-    background-color: #4a008a;
+    background-image: linear-gradient(to bottom right, #e676ca, rgba(102, 105, 192, 0.96));
     text-align: right;
+    height: 7.7vh;
 }
 
 .ui .computer.only .item {
     color: #fff;
 }
 
-.ui .computer.only .item:hover {
-    background: #6311aa !important;
-    color: #fff !important;
-    border-bottom: 1px solid #fff;
-}
-
-.ui .computer .item.active {
-    background: #00ba49;
-    color: #fff;
-    border-bottom: 1px solid #fff;
-    padding-left: 5%;
-}
+/*.ui .computer.only .item:hover {*/
+/*    background: #6311aa !important;*/
+/*    color: #fff !important;*/
+/*}*/
 
 .ui.dropdown.item .menu {
     background-color: #4a008a !important;
@@ -61,32 +53,25 @@ a.item {
     text-align: center;
 }
 
-.ui.menu .ui.dropdown .menu > .item:hover {
-    background-color: #6311aa !important;
-    color: #fff !important;
-    border-bottom: 1px solid #fff;
-}
-
-.ui.fixed.borderless.menu .row > a.header.item {
-    font-size: 1.2em;
-}
+/*.ui.menu .ui.dropdown .menu > .item:hover {*/
+/*    background-color: #6311aa !important;*/
+/*    color: #fff !important;*/
+/*}*/
 
 /* Mobile */
 .tablet.mobile.only .header, .ui.icon.button > .icon {
     color: #fff;
 }
 
-.tablet.mobile.only .header:hover {
-    background-color: #6311aa !important;
-    color: #fff !important;
-    border-bottom: 1px solid #fff;
-}
+/*.tablet.mobile.only .header:hover {*/
+/*    background-color: #6311aa !important;*/
+/*    color: #fff !important;*/
+/*}*/
 
-.ui.basic.button:hover {
-    background: #6311aa !important;
-    color: #fff !important;
-    border-bottom: 1px solid #fff;
-}
+/*.ui.basic.button:hover {*/
+/*    background: #6311aa !important;*/
+/*    color: #fff !important;*/
+/*}*/
 
 .ui.vertical.menu {
     display: none;
@@ -107,26 +92,10 @@ a.item {
     border-bottom: 1px solid #fff;
 }
 
-input {
-    margin: 10px;
-    font-family: 'Helvetica Neue', sans-serif;
-    border-radius: 7px;
-    padding: 5px;
-}
 
 .content {
+    font-size: 16px;
     width: 700px;
-}
-
-
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    border-radius: 10px;
 }
 
 button {
@@ -141,47 +110,13 @@ button {
 
 }
 
-form {
-    width: 40%;
-    text-align: center;
-    display: inline-block;
-    align-content: center;
-}
-
 button:hover {
     opacity: 0.8;
 }
 
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: gray;
-}
-
-.container {
-    padding: 16px;
-}
-
-span.psw {
-    float: right;
-    padding-top: 16px;
-}
-
-a.link
-{
+a.link {
     color:grey;
     text-decoration: none;
-}
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-    span.psw {
-        display: block;
-        float: none;
-    }
-    .cancelbtn {
-        width: 100%;
-    }
 }
 
 .no-fouc {
