--- a/src/main/resources/static/css/pathway.css
+++ b/src/main/resources/static/css/pathway.css
@@ -96,9 +96,7 @@ a.link {
     background-color: ghostwhite;
     padding: 14px 20px;
     margin: 8px 10px;
-    border: solid;
-    border-color: #4CAF50;
-    border-width: medium;
+    border: medium solid #42d857;
     cursor: pointer;
     width: 25%;
     height: 250px;
@@ -111,9 +109,7 @@ a.link {
     background-color: ghostwhite;
     padding: 14px 20px;
     margin: 8px 10px;
-    border: solid;
-    border-color: #35adaf;
-    border-width: medium;
+    border: medium solid #12c2c7;
     cursor: pointer;
     width: 25%;
     height: 250px;
@@ -126,9 +122,7 @@ a.link {
     background-color: ghostwhite;
     padding: 14px 20px;
     margin: 8px 10px;
-    border: solid;
-    border-color: #af3263;
-    border-width: medium;
+    border: medium solid #d948a0;
     cursor: pointer;
     width: 25%;
     height: 250px;
