--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -156,7 +156,7 @@ a:link {
 
 /* visited link */
 a:visited {
-    color: #800080;
+    color: black;
 }
 
 /* mouse over link */
@@ -174,6 +174,11 @@ a:active {
     width: 30%;
     align-content: center;
     color: #f5ffff;
+}
+
+a.link {
+    color:black;
+    text-decoration: none;
 }
 
 /* Change styles for span and cancel button on extra small screens */
